# winter

./: .env  .gitignore  README.md  build.py  index.html  install.html  main-x86_64-apple-darwin.spec  main.spec  package-lock.json  package.json  splashscreen.html  tailwind.config.tsx  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/agent_backend/: __init__.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  disk.rs  lib.rs  main.rs  model_registry.rs  prompt_assembler.rs
src-tauri/src/agents/: architecture_agent.rs  codegen_agent.rs  critique_agent.rs  deployment_agent.rs  doc_agent.rs  hello_agent.rs  mod.rs  planner_agent.rs  refactor_agent.rs  repo_agent.rs  requirements_agent.rs  scaffold_agent.rs  security_agent.rs  test_agent.rs  utils.rs
src-tauri/src/agents/memory/: mod.rs  project_memory.rs  session_memory.rs  task_memory.rs
src-tauri/src/agents/orchestrator/: agent_loader.rs  context.rs  job_card.rs  logging.rs  mod.rs  orchestrator.rs  protocol.rs  (+6 more)
src-tauri/src/memory/: global_memory.rs  mod.rs  planner_memory.rs  project_memory.rs  runtime_memory.rs
src-tauri/src/model/: llama_wrapper.rs  mod.rs  model_downloader.rs  model_installer.rs  model_manager.rs  model_registry.rs  model_selector.rs
src-tauri/src/orchestrator/: agent_loader.rs  feedback.rs  hash.rs  mod.rs  orchestrator.rs  prompt_assembler.rs  protocol.rs  registry.rs  timeline.rs  types.rs  utils.rs
src-tauri/src/tools/: echo_tool.rs  file_tool.rs  llm_planner.rs  llm_tool.rs  mod.rs  tool.rs
(+82 files in other folders)
