[package]
name = "Winter"
version = "0.1.1"
description = "A Native AI Agent"
authors = ["maxx Ng'ang'a"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "winter_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
portpicker = "0.1"
reqwest = { version = "0.12.15", features = ["blocking", "stream", "json"] }
tokio = { version = "1.44.1",features = ["full"] }
dirs = "6.0.0"
futures-util = "0.3.31"
sha2 = "0.10"
sysinfo = { version = "0.34.2",features = ["disk"] }
log = "0.4.27"
uuid = { version = "1.16.0", features = ["v4"] }
async-trait = "0.1.88"
futures = "0.3.31"
anyhow = "1.0.97"
